@startuml

title __PATTERN's Class Diagram__\n

  namespace pattern {
    abstract class pattern.Component {
        # name : String
        + add()
        {abstract} + doSomething()
        + getName()
        + remove()
    }
  }
  

  namespace pattern {
    class pattern.Composite {
        - components : ArrayList<Component>
        + Composite()
        + add()
        + doSomething()
        + remove()
    }
  }
  

  namespace pattern {
    class pattern.CompositeTest {
        {static} + main()
    }
  }
  

  namespace pattern {
    class pattern.Leaf {
        + Leaf()
        + doSomething()
    }
  }
  

  pattern.Composite -up-|> pattern.Component
  pattern.Leaf -up-|> pattern.Component
pattern.Composite "1" *-up-> "*" pattern.Component

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
